[project]
name = "proxy-server-challenge"
version = "0.1.0"
description = "Authenticated HTTP/HTTPS proxy with metrics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
]
